// protobuf definition of todo item

syntax = "proto3";
package todo;

option go_package = "github.com/yuhuishi-convect/grpc-todo/proto";

message TodoItem {
    string id = 1;
    string title = 2;
    string description = 3;
    bool done = 4;
}

// grpc service to list all todo items
service TodoService {
    // list all todo items
    rpc List(ListRequest) returns (ListResponse) {}
    // create a todo item
    rpc Create(CreateRequest) returns (CreateResponse) {}
}

message ListRequest {
    bool done = 1; // if to fetch only done items
}

message ListResponse {
    repeated TodoItem items = 1;
}

message CreateRequest {
    string title = 1;
    string description = 2;
}

message CreateResponse {
    TodoItem item = 1;
}